--- a/_viewport.scss
+++ b/_viewport.scss
@@ -15,17 +15,27 @@ $_viewport_config: (
 @mixin viewport($name) {
 
     $rangeIndex: false;
+    $lastRange: false;
 
     @for $i from 1 to length($_viewport_config) + 1 {
         @if (nth(nth($_viewport_config, $i), 2) == $name) {
             $rangeIndex: $i;
+            @if ($i == length($_viewport_config)) {
+                $lastRange: true;
+            }
         }
     }
 
     $lowBound: nth($_viewport_config, $rangeIndex);
-    $highBound: nth($_viewport_config, $rangeIndex + 1);
 
-    @media (min-width: #{nth($lowBound, 1)}) and (max-width: #{nth($highBound, 1) - 1}) {
-        @content;
+    @if ($lastRange) {
+        @media (min-width: #{nth($lowBound, 1)}) {
+            @content;
+        }
+    } @else {
+        $highBound: if($lastRange, null, nth($_viewport_config, $rangeIndex + 1));
+        @media (min-width: #{nth($lowBound, 1)}) and (max-width: #{nth($highBound, 1) - 1}) {
+            @content;
+        }
     }
 }
