--- a/_viewport.scss
+++ b/_viewport.scss
@@ -37,18 +37,27 @@ $_viewport_config: (
     $lowBound: nth($_viewport_config, $rangeIndex);
 
     @if ($queryType == 'up-to') {
-        $highBound: nth($_viewport_config, $rangeIndex + 1);
-        @media (max-width: #{nth($highBound, 1) - 1}) {
+
+        @if ($lastRange) { // saying "up-to" a last range doesn't really make sense, but for consistency let's tolerate it
             @content;
+        } @else {
+            $highBound: nth($_viewport_config, $rangeIndex + 1);
+            @media (max-width: #{nth($highBound, 1) - 1}) {
+                @content;
+            }
         }
-    } @else if ($lastRange) {
-        @media (min-width: #{nth($lowBound, 1)}) {
-            @content;
-        }
-    } @else {
-        $highBound: nth($_viewport_config, $rangeIndex + 1);
-        @media (min-width: #{nth($lowBound, 1)}) and (max-width: #{nth($highBound, 1) - 1}) {
-            @content;
+
+    } @else if ($queryType == 'among') {
+
+        @if ($lastRange) {
+            @media (min-width: #{nth($lowBound, 1)}) {
+                @content;
+            }
+        } @else {
+            $highBound: nth($_viewport_config, $rangeIndex + 1);
+            @media (min-width: #{nth($lowBound, 1)}) and (max-width: #{nth($highBound, 1) - 1}) {
+                @content;
+            }
         }
     }
 }
