--- a/index.scss
+++ b/index.scss
@@ -7,7 +7,7 @@ body {
     color: #333333;
 }
 
-@mixin selected {
+@mixin selected-1 {
     background: gray;
     color: white;
 }
@@ -16,6 +16,7 @@ body {
 
     margin: 0;
     padding: 0;
+    overflow: hidden;
 
     li {
 
@@ -30,22 +31,56 @@ body {
 
         &:nth-child(1) {
             @include viewport('tiny') {
-                @include selected;
+                @include selected-1;
             }
         }
         &:nth-child(2) {
             @include viewport('small') {
-                @include selected;
+                @include selected-1;
             }
         }
         &:nth-child(3) {
             @include viewport('medium') {
-                @include selected;
+                @include selected-1;
             }
         }
         &:nth-child(4) {
             @include viewport('large') {
-                @include selected;
+                @include selected-1;
+            }
+        }
+    }
+}
+
+@mixin selected-2 {
+    color: inherit;
+    font-weight: bold;
+}
+
+#up-to {
+
+    li {
+
+        color: gray;
+
+        &:nth-child(1) {
+            @include viewport(up-to 'tiny') {
+                @include selected-2;
+            }
+        }
+        &:nth-child(2) {
+            @include viewport(up-to 'small') {
+                @include selected-2;
+            }
+        }
+        &:nth-child(3) {
+            @include viewport(up-to 'medium') {
+                @include selected-2;
+            }
+        }
+        &:nth-child(4) {
+            @include viewport(up-to 'large') {
+                @include selected-2;
             }
         }
     }
