--- a/test/fixtures/003.scss
+++ b/test/fixtures/003.scss
@@ -1,9 +1,9 @@
-@import "../../viewport";
+@import "../../viewports";
 
 /* it handles a basic "up-to" query */
 
 p {
-    @include viewport(up-to 'medium') {
+    @include viewports(up-to 'medium') {
         color: red;
     }
 }
