Added a not about a possible new query type "not".

--- a/_viewports.scss
+++ b/_viewports.scss
@@ -34,6 +34,8 @@ $_viewport_config: (
         $lookForName: nth($name, 2);
     }
 
+    // TODO: "not"..?
+
     $rangeIndex: false;
     $lastRange: false;
 
